# FLIP

./: .gitignore  CONVERSION_SUMMARY.md  MIGRATION_COMPLETE.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.archive/nextjs-old/: eslint.config.mjs
.github/workflows/: build-and-release.yml  release.yml
electron/: main.js  preload.js
flip/: README.md  package-lock.json  package.json
flip/src/app/: layout.tsx  page.tsx
flip/src/components/: Chair.tsx  LoginForm.tsx  Navbar.tsx  Notification.tsx  PDFList.tsx  ScheduleCard.tsx  Sidebar.tsx
flip/src/lib/: academic.ts  clipVars.ts  sessions.ts  urls.ts
scripts/: prepare-release.sh
src-tauri/: Cargo.toml  output.html  tauri.conf.json
src-tauri/src/: commands.rs  constants.rs  lib.rs  main.rs  parser.rs  session.rs  types.rs  utils.rs
src-tauri/src/types/: academic.rs  auth.rs  mod.rs  schedule.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AnimatedInput.tsx  ButtonWithAnimatedBG.tsx  Chair.tsx  Loader.tsx  LoginForm.tsx  Navbar.tsx  PDFList.tsx  ScheduleCard.tsx  Sidebar.tsx
src/lib/: academic.ts  clipVars.ts
src/lib/handlers/: chairsHandler.ts  fileHandler.ts  loginHandler.ts
src/lib/scrappers/: clipLogin.ts  getChairs.ts  getFiles.ts  urls.ts
src/types/: electron.d.ts
vue-app/: index.html  package-lock.json  package.json  vite.config.ts
vue-app/src/: App.vue  style.css
vue-app/src/components/: AnimatedInput.vue  ButtonWithAnimatedBG.vue  Chair.vue  Dropdown.vue  Loader.vue  LoginForm.vue  Navbar.vue  Notification.vue  (+5 more)
(+24 files in other folders)
