[package]
name = "flip"
version = "0.1.0"
description = "FLIP - Webscraping app for CLIP"
authors = ["Miguel Flor"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "flip_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# HTTP client with cookie support
reqwest = { version = "0.12", features = ["cookies", "json"] }
reqwest_cookie_store = "0.8"

# HTML parsing
scraper = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# ZIP creation
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# UUID for session IDs
uuid = { version = "1.0", features = ["v4"] }

# URL parsing
url = "2.5"

# Base64 encoding for file transfer
base64 = "0.22"

# Mutex for state management
parking_lot = "0.12"

# Date/time handling
chrono = "0.4"

# Character encoding (CLIP uses ISO-8859-1)
encoding_rs = "0.8"
